--- a/assets/scss/_main-custom.scss
+++ b/assets/scss/_main-custom.scss
@@ -378,7 +378,7 @@ p.name-line.active {
 			}
 		}
 		#portfproj-container05 {
-			margin-top:20px;
+			margin-top:60px;
 			@media screen and (min-width:410px) {
 				margin-top:30px;
 			}
